2008-09-04  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Do not let jabber users make the bot kick itself.

2008-02-25  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Support recording user colors (from tkchat)
	and write to a file as .css for the wubchain to use.

2008-06-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Listen on a localhost port for connections from
	the paste bot and announce new pastes to the channel and muc.

2008-02-10  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Increment version to 1.1.0
	* ijbridge.tcl: Switch to use of the digest version of the
	jabberl:iq:auth authentication protocol.

2008-01-27  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Fixed the userinfo to retrieve the users
	host info from the 311 response (FR #1727793 mjanssen)

2007-04-19  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Changed handling of NAMES reponses to
	cope with multiple lines and request op mode in the end
	of names event.

2007-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Command to get stats from bridge.
	* ijbridge.tcl: Added some bot commands for access from
	IRC. Can ask the bridge for jabber user names. Fixed receipt of
	presence information.

2007-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Added some statistics recording.

2006-11-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ibridge.tcl: Fix ircbridge nicks.

2006-10-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Added auto-op and kick support. Also whois.

2006-09-11  Pat Thoyts <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Additional <iq> support.

2006-06-23  Daniel South  <wildcard_25@users.sourceforge.net>

	* ijbridge.tcl: Correct some list matching for IrcUserList.

2006-03-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ijbridge.tcl: Added version command.